@@ -13,6 +13,7 @@ import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
+import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.settings.Settings;
@@ -147,17 +148,14 @@ public class CoordinationStateTestCluster {
                 }
             }
 
-            localNode = new DiscoveryNode(
-                localNode.getName(),
-                localNode.getId(),
-                UUIDs.randomBase64UUID(random()),
-                localNode.getHostName(),
-                localNode.getHostAddress(),
-                localNode.getAddress(),
-                localNode.getAttributes(),
-                roles,
-                localNode.getVersion()
-            );
+            localNode = DiscoveryNodeUtils.builder(localNode.getId())
+                .name(localNode.getName())
+                .ephemeralId(UUIDs.randomBase64UUID(random()))
+                .address(localNode.getHostName(), localNode.getHostAddress(), localNode.getAddress())
+                .attributes(localNode.getAttributes())
+                .roles(roles)
+                .version(localNode.getVersionInformation())
+                .build();
 
             state = new CoordinationState(localNode, persistedState, electionStrategy);
         }
@@ -183,11 +181,12 @@ public class CoordinationStateTestCluster {
     final CoordinationMetadata.VotingConfiguration initialConfiguration;
     final long initialValue;
 
+    @SuppressWarnings("this-escape")
     public CoordinationStateTestCluster(List<DiscoveryNode> nodes, ElectionStrategy electionStrategy) {
         this.electionStrategy = electionStrategy;
         messages = new ArrayList<>();
 
-        clusterNodes = nodes.stream().map(node -> new ClusterNode(node, electionStrategy)).collect(Collectors.toList());
+        clusterNodes = nodes.stream().map(node -> new ClusterNode(node, electionStrategy)).toList();
 
         initialConfiguration = randomVotingConfig();
         initialValue = randomLong();
@@ -200,7 +199,7 @@ public class CoordinationStateTestCluster {
     }
 
     void broadcast(DiscoveryNode sourceNode, Object payload) {
-        messages.addAll(clusterNodes.stream().map(cn -> new Message(sourceNode, cn.localNode, payload)).collect(Collectors.toList()));
+        clusterNodes.stream().map(cn -> new Message(sourceNode, cn.localNode, payload)).forEach(messages::add);
     }
 
     Optional<ClusterNode> getNode(DiscoveryNode node) {
@@ -251,9 +250,7 @@ public class CoordinationStateTestCluster {
                 } else if (rarely() && rarely()) {
                     randomFrom(clusterNodes).reboot();
                 } else if (rarely()) {
-                    final List<ClusterNode> masterNodes = clusterNodes.stream()
-                        .filter(cn -> cn.state.electionWon())
-                        .collect(Collectors.toList());
+                    final List<ClusterNode> masterNodes = clusterNodes.stream().filter(cn -> cn.state.electionWon()).toList();
                     if (masterNodes.isEmpty() == false) {
                         final ClusterNode clusterNode = randomFrom(masterNodes);
                         final long term = rarely() ? randomLongBetween(0, maxTerm + 1) : clusterNode.state.getCurrentTerm();
