@@ -239,8 +239,6 @@ public class MonitoringTemplateRegistry extends IndexTemplateRegistry {
             .orElseThrow(() -> new IllegalArgumentException("Invalid system [" + system + "]"));
     }
 
-    private final List<LifecyclePolicy> ilmPolicies;
-
     public MonitoringTemplateRegistry(
         Settings nodeSettings,
         ClusterService clusterService,
@@ -251,13 +249,13 @@ public class MonitoringTemplateRegistry extends IndexTemplateRegistry {
         super(nodeSettings, clusterService, threadPool, client, xContentRegistry);
         this.clusterService = clusterService;
         this.monitoringTemplatesEnabled = MONITORING_TEMPLATES_ENABLED.get(nodeSettings);
-        this.ilmPolicies = loadPolicies(nodeSettings);
     }
 
-    private List<LifecyclePolicy> loadPolicies(Settings nodeSettings) {
+    @Override
+    protected List<LifecyclePolicyConfig> getLifecycleConfigs() {
         Map<String, String> templateVars = new HashMap<>();
-        if (HISTORY_DURATION.exists(nodeSettings)) {
-            templateVars.put(MONITORING_POLICY_RETENTION_VARIABLE, HISTORY_DURATION.get(nodeSettings).getStringRep());
+        if (HISTORY_DURATION.exists(settings)) {
+            templateVars.put(MONITORING_POLICY_RETENTION_VARIABLE, HISTORY_DURATION.get(settings).getStringRep());
             templateVars.put(
                 MONITORING_POLICY_RETENTION_REASON_VARIABLE,
                 "the value of the [" + HISTORY_DURATION.getKey() + "] setting at node startup"
@@ -266,9 +264,12 @@ public class MonitoringTemplateRegistry extends IndexTemplateRegistry {
             templateVars.put(MONITORING_POLICY_RETENTION_VARIABLE, MONITORING_POLICY_DEFAULT_RETENTION);
             templateVars.put(MONITORING_POLICY_RETENTION_REASON_VARIABLE, "the monitoring plugin default");
         }
-        LifecyclePolicy monitoringPolicy = new LifecyclePolicyConfig(MONITORING_POLICY_NAME, "/monitoring-mb-ilm-policy.json", templateVars)
-            .load(LifecyclePolicyConfig.DEFAULT_X_CONTENT_REGISTRY);
-        return Collections.singletonList(monitoringPolicy);
+        LifecyclePolicyConfig monitoringPolicy = new LifecyclePolicyConfig(
+            MONITORING_POLICY_NAME,
+            "/monitoring-mb-ilm-policy.json",
+            templateVars
+        );
+        return List.of(monitoringPolicy);
     }
 
     @Override
@@ -318,9 +319,9 @@ public class MonitoringTemplateRegistry extends IndexTemplateRegistry {
     }
 
     @Override
-    protected List<LifecyclePolicy> getPolicyConfigs() {
+    protected List<LifecyclePolicy> getLifecyclePolicies() {
         if (monitoringTemplatesEnabled) {
-            return ilmPolicies;
+            return lifecyclePolicies;
         } else {
             return Collections.emptyList();
         }
